--- a/simple/增删改/task.html
+++ b/simple/增删改/task.html
@@ -38,6 +38,12 @@
         .grid th {
             background-color: rgb(233, 182, 87);
         }
+        .grid .total {
+            height: 30px;
+            line-height: 30px;
+            background-color: rgb(238, 209, 155);
+            border-bottom: 1px solid rgb(179, 179, 179);
+        }
     </style>
 </head>
 <body>
@@ -47,14 +53,18 @@
                 <form action="#">
                     <label for="bookId">
                         编号：
-                        <input id="bookId" v-model="bookId" type="text">
+                        <input id="bookId" v-model="bookId" type="text" :disabled="flag" v-focus>
                     </label>
                     <label for="bookName">
                         名称：
                         <input id="bookName" v-model="bookName" type="text">
                     </label>
-                    <button @click.prevent='handle'>提交</button>
+                    <button @click.prevent='handle' :disabled="submitFlag">提交</button>
                 </form>
+            </div>
+            <div class="total">
+                <span>图书总数：</span>
+                <span>{{total}}</span>
             </div>
             <table>
                 <thead>
@@ -70,11 +80,11 @@
                         <td>{{book.id}}</td>
                         <td>{{book.name}}</td>
                         <!-- <td>2021-01-01</td> -->
-                        <td>{{book.date}}</td>
+                        <td>{{book.date | format('yyyy-MM-dd hh:mm:ss')}}</td>
                         <td>
-                            <a href="#" @click.prevent='edit'>修改</a>
+                            <a href="#" @click.prevent='edit(book.id)'>修改</a>
                             <span>|</span>
-                            <a href="#" @click.prevent>删除</a>
+                            <a href="#" @click.prevent='remove(book.id)'>删除</a>
                         </td>
                     </tr>
 
@@ -84,50 +94,157 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
+
+        // 自定义指令
+        Vue.directive('focus', {
+            inserted: function (el) {
+                el.focus();
+            }
+        });
+        // date过滤器
+        Vue.filter('format', function(value, arg) {
+            function dateFormat(date, format) {
+                if (typeof date === "string") {
+                    let mts = date.match(/(\/Date\((\d+)\)\/)/);
+                    if (mts && mts.length >= 3) {
+                        date = parseInt(mts[2]);
+                    }
+                }
+                date = new Date(date);
+                if (!date || date.toUTCString() == "Invalid Date") {
+                    return "";
+                }
+                let map = {
+                    "M": date.getMonth() + 1,
+                    "d": date.getDate(),
+                    "h": date.getHours(),
+                    "m": date.getMinutes(),
+                    "s": date.getSeconds(),
+                    "q": Math.floor((date.getMonth() + 3) / 3),
+                    "S": date.getMilliseconds()
+                };
+                format = format.replace(/([yMdhmsqS])+/g, function(all, t) {
+                    let v = map[t];
+                    if (v !== undefined) {
+                        if (all.length > 1) {
+                            v = '0' + v;
+                            v = v.substr(v.length - 2);
+                        }
+                        return v;
+                    } else if (t === 'y') {
+                        return (date.getFullYear() + '').substr(4 - all.length);
+                    }
+                    return all;
+                });
+                return format;
+            }
+            return dateFormat(value, arg);
+        })
+
         let vm = new Vue({
             el: '#app',
             data: {
+                flag: false,
+                submitFlag: false,
                 bookId: '',
                 bookName: '',
-                books: [{
-                    id: 1,
-                    name: '三国演义',
-                    date: ''
-                },{
-                    id: 2,
-                    name: '水浒传',
-                    date: ''
-                },{
-                    id: 3,
-                    name: '红楼梦',
-                    date: ''
-                },{
-                    id: 4,
-                    name: '西游记',
-                    date: ''
-                }]
+                books: []
             },
             methods: {
                 handle: function() {
-                    // 添加图书
-                    let book = {
-                        id: this.bookId,
-                        name: this.bookName,
-                        date: ''
+                    if(this.flag) {
+                        // 编辑
+                        // 根据当前ID去更新数组中对应的数据
+                        this.books.some((item) => {
+                            if(item.id == this.bookId) {
+                                item.name = this.bookName;
+                                // 完成更新操作之后，需要终止循环
+                                return true;
+                            }
+                        });
+                        this.flag = false;
+                    } else {
+                        // 添加
+                        let book = {
+                            id: this.bookId,
+                            name: this.bookName,
+                            date: ''
+                        }
+                        this.books.push(book);
                     }
-                    this.books.push(book);
-                    // if (!this.bookId) {
-                    //     this.bookId = this.books.length + 1;
-                    // }
-                    // console.log(this.bookId);
-                    // vm.$set(vm.books, this.bookId-1, book)
                     // 清空表单
                     this.bookId = '';
                     this.bookName = '';
                 },
-                edit: function(e) {
-                    console.log(e.bookId);
+                edit: function(id) {
+                    // 禁止修改ID
+                    this.flag = true;
+                    // 根据ID查询出要编辑的数据
+                    let book = this.books.filter(function(item) {
+                        return item.id == id;
+                    })
+                    // 把获取到的信息填充到表单
+                    this.bookId = book[0].id;
+                    this.bookName = book[0].name;
+                },
+                remove: function(id) {
+                    // 删除图书
+                    // 根据ID从数组中查找元素的索引
+                    // let index = this.books.findIndex(function(item) {
+                    //     return item.id == id;
+                    // });
+                    // // 根据索引删除数组元素
+                    // this.books.splice(index, 1)
+                    // -----
+                    // 方法二：通过filter方法进行删除
+                    this.books = this.books.filter(function(item) {
+                        return item.id != id;
+                    });
                 }
+            },
+            computed: {
+                total: function() {
+                    // 计算图书的总数
+                    return this.books.length;
+                }
+            },
+            watch: {
+                bookName: function(val) {
+                    // 验证图书名称是否已经存在
+                    let flag = this.books.some(function(item) {
+                        return item.name == val;
+                    });
+                    console.log('qwq');
+                    if (flag) {
+                        // 图书名称存在
+                        this.submitFlag = true;
+                    } else {
+                        // 图书名称不存在
+                        this.submitFlag = false;
+                    }
+                }
+            },
+            mounted: function() {
+                // 该生命周期狗子函数被触发的时候，模板已经可以使用
+                // 一般此时用于获取后台数据，然后把数据填充到模板
+                let data = [{
+                    id: 1,
+                    name: '三国演义',
+                    date: 2525609975000
+                },{
+                    id: 2,
+                    name: '水浒传',
+                    date: 2525609975000
+                },{
+                    id: 3,
+                    name: '红楼梦',
+                    date: 2525609977000
+                },{
+                    id: 4,
+                    name: '西游记',
+                    date: 2525609978000
+                }];
+                this.books = data;
             }
         })
     </script>
@@ -146,6 +263,16 @@
         修改信息填充到表单
         修改后重新提交表单
         重用添加和修改方法 -->
+    <!-- 4 删除图书
+        删除按钮绑定事件处理方法
+        实现删除业务逻辑 -->
+    <!-- 5 常用特性应用场景
+        过滤器（格式化日期）
+        自定义指令（获取表单焦点）
+        计算属性（统计图书数量）
+        侦听器（验证图书存在性）
+        生命周期（图书数据处理） -->
+        
 
 </body>
 </html>
