--- a/normal/ToDoList/ToDoList.html
+++ b/normal/ToDoList/ToDoList.html
@@ -92,15 +92,15 @@
         <main>
             <div class="header">
                 <div class="add_task">
-                    <input type="text" class="task_input" placeholder="添加事件" v-model='content' @keyup.enter=addtask>
+                    <input type="text" class="task_input" placeholder="添加事件" v-model='content' @keyup.enter=addtask v-focus>
                 </div>
-                <div class="now">5月8日</div>
+                <div class="now">{{now}}</div>
             </div>
             <div id="task_list">
                 <ul class="tsklist_underway">
                     <li :key='task.id' v-for='task in tasks' class="task_item">
                         <input type="button" class="task_complete" @click=complete(task.id) value="">
-                        <span class="task_content">{{task.task}}</span>
+                        <span class="task_content" @dblclick.prevent=edit(task.id)>{{task.task}}</span>
                         <input type="button" class="tomato" value="">
                     </li>
                 </ul>
@@ -117,6 +117,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
+        Vue.directive('focus', {
+            inserted: function(el) {
+                el.focus();
+            }
+        });
         let vue = new Vue({
             el: "#app",
             data: {
@@ -126,6 +131,11 @@
             },
             methods: {
                 addtask: function() {
+                    // 确保输入了内容
+                    if (!this.content) {
+                        return;
+                    }
+
                     let task = {
                         id: this.total,
                         task: this.content
@@ -133,32 +143,38 @@
                     this.tasks.push(task);
                     this.total++;
                     this.content = '';
+                    this.saveTasks();
+                },
+                edit: function(id) {
+                    console.log(id);
+                    // !!!!!!!!!!!!!!!!!!!
                 },
                 complete: function(id) {
                     this.tasks = this.tasks.filter(function(item) {
                         return item.id != id;
                     });
+                    this.saveTasks();
+                },
+                saveTasks() {
+                    const parsed = JSON.stringify(this.tasks);
+                    localStorage.setItem('tasks', parsed);
+                }
+            },
+            computed: {
+                now: function() {
+                    let date = new Date();
+                    let now = date.getMonth() + 1 + '月' + date.getDate() + '日'
+                    return now
                 }
             },
             mounted: function() {
-                let data = [{
-                    id: 1,
-                    task: '好好学习，天天向上',
-                    time: 5
-                }, {
-                    id: 2,
-                    task: '英语单词',
-                    time: 25
-                }, {
-                    id: 3,
-                    task: '锻炼身体',
-                    time: 25
-                }, {
-                    id: 4,
-                    task: 'vue总复习',
-                    time: 120
-                }]
-                this.tasks = data;
+                if (localStorage.getItem('tasks')) {
+                    try {
+                        this.tasks = JSON.parse(localStorage.getItem('tasks'));
+                    } catch(e) {
+                        localStorage.removeItem('tasks');
+                    }
+                }
             }
         })
     </script>
