--- a/simple/增删改/task.html
+++ b/simple/增删改/task.html
@@ -225,7 +225,7 @@
                 }
             },
             mounted: function() {
-                // 该生命周期狗子函数被触发的时候，模板已经可以使用
+                // 该生命周期钩子函数被触发的时候，模板已经可以使用
                 // 一般此时用于获取后台数据，然后把数据填充到模板
                 let data = [{
                     id: 1,
